Mantendo compatibilidade versão java 1.8